[package]
name = "bdo_enhancement_profit_calculator"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = "1.21.2"
serde_json = "1.0.87"
serde = "1.0.147"
rand = "0.8.5"